# Mi7

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent_discussion_app.py  pyproject.toml  test_prompt.md
Snapshot/SNAP1/: CONTEXT.md
docs/: development.md  technical.md  user_guide.md
ma_discussion/: app.py  constants.py
ma_discussion/agents/: base.py  coordinator.py  factory.py
ma_discussion/services/: ollama.py  settings.py  wikipedia.py
ma_discussion/tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_base.py  test_coordinator.py  test_factory.py  test_json_io.py  test_ollama.py  test_state.py  test_wikipedia.py
ma_discussion/ui/: main.py  sidebar.py  state.py
ma_discussion/utils/: json_io.py  regex.py
tests/: test_agents.py
