[project]
name = "ma_discussion"
version = "0.1.0"
description = "Multi-Agent Discussion System"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "streamlit==1.32.2",
    "requests==2.31.0",
    "pydantic==2.6.3",
    "pytest==8.0.2",
    "black==24.2.0",
    "ruff==0.3.0",
    "responses==0.25.0",
    "jinja2==3.1.3",
    "wikipedia-api==0.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ma_discussion*"]

[project.scripts]
madisc-ui = "ma_discussion.ui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = 'py38'
select = ["E", "F", "B", "I"] 